# athena

./: .gitignore  Dockerfile  list_catalogs.py  list_schemas.py  main.py  model.onnx.data  pyproject.toml  requirements.txt  requirements_production.txt
.github/workflows/: docker-image.yml
app/: export_model.py  inference.py  main.py
app/static/: index.html
src/models/: linear_model.py  transformer_model.py
src/train/: train.py
src/utils/: evaluation.py  export.py  text_preprocessing.py
